Prevent thread watcher menu from being cut off, by taking top controls out of scrolled region. #418

--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -798,11 +798,13 @@ span.hide-announcement {
 #thread-watcher {
   padding-bottom: 3px;
   padding-left: 3px;
-  overflow: hidden;
   white-space: nowrap;
   min-width: 146px;
-  max-height: 92%;
+}
+#watched-threads {
+  overflow-x: hidden;
   overflow-y: auto;
+  max-height: calc(100vh - 75px);
 }
 #thread-watcher .refresh {
   padding: 0px 3px;
@@ -810,7 +812,7 @@ span.hide-announcement {
 :root.fixed-watcher #thread-watcher {
   position: fixed;
 }
-:root:not(.fixed-watcher) #thread-watcher:not(:hover) {
+:root:not(.fixed-watcher) #watched-threads:not(:hover) {
   max-height: 210px;
   overflow-y: hidden;
 }
